--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "record-map",
   "description": "Returns a Map implementation over a plain object",
   "version": "0.1.0",
-  "private": true,
   "author": {
     "name": "Thiago O Santos <tos.oliveira@gmail.com>"
   },
@@ -37,7 +36,8 @@
     "lint:style": "eslint '**/*.ts'",
     "lint:style:fix": "eslint '**/*.ts' --fix",
     "semantic-release": "semantic-release",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prepublishOnly": "npm run build"
   },
   "jest": {
     "moduleFileExtensions": [
